<resources>
    <string name="app_name">R-Pointer</string>
    <string name="action_minimize">Minimize</string>
    <string name="not_active">Not Active</string>
    <string name="main_framework">Framework: %1$s %2$s</string>
    <string name="main_version">Version: %1$s (%2$s)</string>
    <string name="is_active">Activated</string>
    <string name="theme_default">Default</string>
    <string name="pink">Pink</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="theme_color">Theme Color</string>
    <string name="buildTlite">"Build Time: %1$s"</string>
    <string name="language_auto">Auto</string>
    <string name="language_english">English</string>
    <string name="language_chinese">简体中文</string>
    <string name="language_setting">Language Setting</string>
    <string name="pointer_icon_hide">Hide</string>
    <string name="pointer_icon_default">Default</string>
    <string name="pointer_icon_add">Add</string>
    <string name="pointer_icon_windows">Windows</string>
    <string name="hotspot_setting">Hotspot Setting</string>
    <string name="done">Done</string>
</resources>