<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.hujiayucc.rpointer.ui.activity.MainActivity">
    <item android:id="@+id/action_minimize"
          android:title="@string/action_minimize"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_theme"
          android:title="@string/theme_color"
          android:orderInCategory="200"
          app:showAsAction="never"/>
    <item android:id="@+id/action_language"
          android:title="@string/language_setting"
          android:orderInCategory="300"
          app:showAsAction="never"/>
    <item android:id="@+id/action_hotspot"
          android:title="@string/hotspot_setting"
          android:orderInCategory="400"
          app:showAsAction="never"/>
</menu>